--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -16,38 +16,79 @@
         android:layout_weight="1"
         android:gravity="center"
         android:orientation="vertical" >
-        <!--Cuando tenga imagenes, cambiar el layout_width a 0dp-->
-        <TextView
-            android:id="@+id/presencial"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:fontFamily="sans-serif-light"
-            android:gravity="center"
-            android:paddingBottom="5dp"
-            android:paddingLeft="5dp"
-            android:paddingRight="5dp"
-            android:textColor="@color/text"
-            android:textSize="22sp"
-            android:text="@string/menu_presencial"
-           />
-        <!--android:drawableTop="@drawable/jobs_grid_icon" />-->
 
-        <TextView
-            android:id="@+id/online"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:fontFamily="sans-serif-light"
-            android:gravity="center"
-            android:paddingBottom="5dp"
-            android:paddingLeft="5dp"
-            android:paddingRight="5dp"
-            android:textColor="@color/text"
-            android:textSize="22sp"
-            android:text="@string/menu_online"
-            />
-           <!-- android:drawableTop="@drawable/courses_grid_icon" />-->
+
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="center_vertical"
+            android:layout_weight="1">
+            <!--Cuando tenga imagenes, cambiar el layout_width a 0dp-->
+            <TextView
+                android:id="@+id/presencial"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:fontFamily="sans-serif-light"
+                android:gravity="center"
+                android:paddingBottom="5dp"
+                android:paddingLeft="5dp"
+                android:paddingRight="5dp"
+                android:paddingTop="5dp"
+                android:textColor="@color/text"
+                android:textSize="20sp"
+                android:text="@string/menu_presencial"
+                android:textAlignment="center"
+                android:layout_weight="2" />
+            <!--android:drawableTop="@drawable/jobs_grid_icon" />-->
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:padding="20dp"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:text="Ahora tiene la oportunidad de formarse en las nuevas tecnologías de la información y la comunicación. Ponemos a su disposición toda una red de centros, variedad de horarios y un amplio catálogo de talleres y cursos. Para más información, contacte con el teléfono 012."
+                android:id="@+id/textView_presencial"
+                android:textSize="@dimen/abc_text_size_small_material"
+                android:textAlignment="center"
+                android:layout_weight="1" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="center_vertical"
+            android:layout_weight="1">
+
+            <TextView
+                android:id="@+id/online"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:fontFamily="sans-serif-light"
+                android:gravity="center"
+                android:paddingBottom="5dp"
+                android:paddingLeft="5dp"
+                android:paddingRight="5dp"
+                android:textColor="@color/text"
+                android:textSize="20sp"
+                android:text="@string/menu_online" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:layout_weight="1"
+                android:padding="20dp"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:text="Podrá acceder a una amplia oferta de formación en nuevas tecnologías desde nuestra plataforma de formación virtual. "
+                android:id="@+id/textView_online"
+                android:textSize="@dimen/abc_text_size_small_material"
+                android:textAlignment="center" />
+            <!-- android:drawableTop="@drawable/courses_grid_icon" />-->
+        </LinearLayout>
+
 
 
     </LinearLayout>
