--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -39,7 +39,8 @@
                 android:textSize="20sp"
                 android:text="@string/menu_presencial"
                 android:textAlignment="center"
-                android:layout_weight="2" />
+                android:layout_weight="2"
+                android:drawableTop="@drawable/presenciales"/>
             <!--android:drawableTop="@drawable/jobs_grid_icon" />-->
             <TextView
                 android:layout_width="match_parent"
@@ -77,7 +78,8 @@
                 android:paddingRight="5dp"
                 android:textColor="@color/text"
                 android:textSize="20sp"
-                android:text="@string/menu_online" />
+                android:text="@string/menu_online"
+                android:drawableTop="@drawable/online"/>
 
             <TextView
                 android:layout_width="match_parent"
