--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -5,6 +5,32 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context="es.jcyl.cee.cylford.app.cyldigital.ui.MenuActivity">
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="45dp"
+        android:background="@color/menu" >
+        <!--
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:src="@drawable/logo_ecyl_center" />
+        -->
+        <!--
+        <ImageView
+            android:id="@+id/help"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="10dp"
+            android:src="@drawable/help_icon_selector" />
+            -->
+
+    </RelativeLayout>
+
+
     <!--
     <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
@@ -50,8 +76,8 @@
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:text="Ahora tiene la oportunidad de formarse en las nuevas tecnologías de la información y la comunicación. Ponemos a su disposición toda una red de centros, variedad de horarios y un amplio catálogo de talleres y cursos. Para más información, contacte con el teléfono 012."
                 android:id="@+id/textView_presencial"
-                android:textSize="@dimen/notification_subtext_size"
-                android:layout_weight="1" />
+                android:textSize="10sp"
+                android:layout_weight="2" />
         </LinearLayout>
 
         <View
@@ -85,13 +111,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:gravity="center"
-                android:layout_weight="1"
                 android:padding="20dp"
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:text="Podrá acceder a una amplia oferta de formación en nuevas tecnologías desde nuestra plataforma de formación virtual. "
                 android:id="@+id/textView_online"
-                android:textSize="@dimen/notification_subtext_size" />
-            <!-- android:drawableTop="@drawable/courses_grid_icon" />-->
+                android:textSize="10sp"
+                android:layout_weight="2"/>
         </LinearLayout>
 
 
