--- a/app/src/main/res/layout/menu_top.xml
+++ b/app/src/main/res/layout/menu_top.xml
@@ -14,12 +14,17 @@
 
     <TextView
         android:id="@+id/title"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:fontFamily="sans-serif-light"
         android:gravity="center"
         android:text="@string/title_presenciales"
-        android:textColor="@color/textw" />
+        android:textColor="@color/textw"
+        android:maxLines="1"
+        android:singleLine="true"
+        android:width="320dp"
+        android:maxWidth="320dp"
+        android:maxLength="40" />
 
 </RelativeLayout>
