--- a/app/src/main/res/layout/item_actividad.xml
+++ b/app/src/main/res/layout/item_actividad.xml
@@ -26,7 +26,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Centro de realización"
+        android:text="Online"
         android:layout_toRightOf="@id/imagen"
         android:id="@+id/centro_realizacion"
         android:layout_below="@+id/titulo_actividad"
