Cambios en el módulo app. Se renombran varioas ficheros y cambiso relacionados con el menú izq.  cambios en el módulo aI Please enter the commit message for your changes. Lines starting

--- a/app/src/main/res/layout/activity_actformativas.xml
+++ b/app/src/main/res/layout/activity_actformativas.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     android:background="@color/background"
     android:orientation="vertical"
-    tools:context="es.jcyl.cee.cylford.app.cyldigital.ui.OnlineActivity">
+    tools:context=".ui.ActividadesFormativasActivity">
 
     <include layout="@layout/menu_top" />
     <!--Línea entre el título y el layout de los combos -->
