--- a/app/src/main/res/layout/activity_menuform.xml
+++ b/app/src/main/res/layout/activity_menuform.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="es.jcyl.cee.cylford.app.cyldigital.ui.MenuActivity">
+    tools:context=".ui.MenuFormacionActivity">
 
     <include layout="@layout/menu_top" />
 
