Nuevos cambios relacionados con el menú lateral en el módulo app

--- a/app/src/main/res/layout/menu_top.xml
+++ b/app/src/main/res/layout/menu_top.xml
@@ -1,31 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    android:orientation="horizontal"
     android:layout_height="45dp"
-    android:background="@color/menu">
+    android:background="@color/menu"
+    android:transitionGroup="false">
+
+    <ImageView
+        android:id="@+id/btnleftmenu"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:src="@drawable/bck_arrow" />
 
     <ImageView
         android:id="@+id/back"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:padding="10dp"
+        android:layout_height="match_parent"
+        android:paddingLeft="15dp"
         android:src="@drawable/bck_arrow" />
 
     <TextView
         android:id="@+id/title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:fontFamily="sans-serif-light"
         android:gravity="center"
         android:text="@string/title_menu_formacion"
         android:textColor="@color/textw"
         android:maxLines="1"
         android:singleLine="true"
-        android:width="320dp"
-        android:maxWidth="320dp"
         android:maxLength="40"
         android:textStyle="bold" />
 
-</RelativeLayout>
+</LinearLayout>
